force-app/main/default/objects/Product__c/fields/AC_Type__c.field-meta.xml
<CustomField>
    <fullName>AC_Type__c</fullName>
    <label>AC Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Changes In Temperature Model</fullName>
            </value>
            <value>
                <fullName>Cold Only Model</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>