force-app/main/default/objects/Product__c/fields/Actual_EXW__c.field-meta.xml
<CustomField>
    <fullName>Actual_EXW__c</fullName>
    <label>Actual EXW</label>
    <length>255</length>
    <type>Text</type>
</CustomField>