force-app/main/default/objects/Product__c/fields/Appearance__c.field-meta.xml
<CustomField>
    <fullName>Appearance__c</fullName>
    <label>Appearance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>