force-app/main/default/objects/Product__c/fields/Application_number__c.field-meta.xml
<CustomField>
    <fullName>Application_number__c</fullName>
    <label>Application number</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>