force-app/main/default/objects/Product__c/fields/Back_Shell_Color__c.field-meta.xml
<CustomField>
    <fullName>Back_Shell_Color__c</fullName>
    <label>Back Shell Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>