force-app/main/default/objects/Product__c/fields/Base_Form__c.field-meta.xml
<CustomField>
    <fullName>Base_Form__c</fullName>
    <label>Base Form</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single stand</fullName>
            </value>
            <value>
                <fullName>Dual stands</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>