force-app/main/default/objects/Product__c/fields/Bluetooth__c.field-meta.xml
<CustomField>
    <fullName>Bluetooth__c</fullName>
    <label>Bluetooth</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>