force-app/main/default/objects/Product__c/fields/Boundary_Dimension_H__c.field-meta.xml
<CustomField>
    <fullName>Boundary_Dimension_H__c</fullName>
    <label>Boundary Dimension H(Delete)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>