force-app/main/default/objects/Product__c/fields/Boundary_Dimension_WDH__c.field-meta.xml
<CustomField>
    <fullName>Boundary_Dimension_WDH__c</fullName>
    <label>Boundary Dimension WDH</label>
    <length>255</length>
    <type>Text</type>
</CustomField>