force-app/main/default/objects/Product__c/fields/Box_Color__c.field-meta.xml
<CustomField>
    <fullName>Box_Color__c</fullName>
    <label>Box Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>