force-app/main/default/objects/Product__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>产品分类</label>
    <length>20</length>
    <type>Text</type>
</CustomField>