force-app/main/default/objects/Product__c/fields/Category_TV_Type__c.field-meta.xml
<CustomField>
    <fullName>Category_TV_Type__c</fullName>
    <formula>Text(Size__c)+ TV_Type1__c + TV_Type2__c + TV_Type3__c + TV_Type4__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category / TV Type</label>
    <type>Text</type>
</CustomField>