force-app/main/default/objects/Product__c/fields/Categorys__c.field-meta.xml
<CustomField>
    <fullName>Categorys__c</fullName>
    <label>Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>