force-app/main/default/objects/Product__c/fields/Channel_1__c.field-meta.xml
<CustomField>
    <fullName>Channel_1__c</fullName>
    <label>Channel 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>