force-app/main/default/objects/Product__c/fields/Climate_type__c.field-meta.xml
<CustomField>
    <fullName>Climate_type__c</fullName>
    <label>Climate type</label>
    <length>225</length>
    <type>Text</type>
</CustomField>