force-app/main/default/objects/Product__c/fields/Cold_Closet_Fruit_Box__c.field-meta.xml
<CustomField>
    <fullName>Cold_Closet_Fruit_Box__c</fullName>
    <label>Cold Closet Fruit Box</label>
    <length>255</length>
    <type>Text</type>
</CustomField>