force-app/main/default/objects/Product__c/fields/Cold_Closet_Humidity_Function__c.field-meta.xml
<CustomField>
    <fullName>Cold_Closet_Humidity_Function__c</fullName>
    <label>Cold Closet Humidity Function</label>
    <length>255</length>
    <type>Text</type>
</CustomField>