force-app/main/default/objects/Product__c/fields/Control_Mode__c.field-meta.xml
<CustomField>
    <fullName>Control_Mode__c</fullName>
    <label>Control Mode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>