force-app/main/default/objects/Product__c/fields/Cooling_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Cooling_Capacity__c</fullName>
    <label>Cooling Capacity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>