force-app/main/default/objects/Product__c/fields/Cooling_Power__c.field-meta.xml
<CustomField>
    <fullName>Cooling_Power__c</fullName>
    <label>Cooling Power</label>
    <length>255</length>
    <type>Text</type>
</CustomField>