force-app/main/default/objects/Product__c/fields/Door_lamp__c.field-meta.xml
<CustomField>
    <fullName>Door_lamp__c</fullName>
    <label>Door lamp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>