force-app/main/default/objects/Product__c/fields/Door_Material__c.field-meta.xml
<CustomField>
    <fullName>Door_Material__c</fullName>
    <label>Door Material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>