force-app/main/default/objects/Product__c/fields/Drainage_Method__c.field-meta.xml
<CustomField>
    <fullName>Drainage_Method__c</fullName>
    <label>Drainage Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>