force-app/main/default/objects/Product__c/fields/Drying_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Drying_Capacity__c</fullName>
    <label>Drying Capacity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>