force-app/main/default/objects/Product__c/fields/Energy_Consumption__c.field-meta.xml
<CustomField>
    <fullName>Energy_Consumption__c</fullName>
    <label>Energy Consumption</label>
    <length>255</length>
    <type>Text</type>
</CustomField>