force-app/main/default/objects/Product__c/fields/Energy_Efficiency_Rating__c.field-meta.xml
<CustomField>
    <fullName>Energy_Efficiency_Rating__c</fullName>
    <label>Energy Efficiency Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>