force-app/main/default/objects/Product__c/fields/Energy_efficiency_rating_TV__c.field-meta.xml
<CustomField>
    <fullName>Energy_efficiency_rating_TV__c</fullName>
    <label>Energy efficiency rating(TV)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>