force-app/main/default/objects/Product__c/fields/Energy_requirements__c.field-meta.xml
<CustomField>
    <fullName>Energy_requirements__c</fullName>
    <label>Energy requirements</label>
    <length>255</length>
    <type>Text</type>
</CustomField>