force-app/main/default/objects/Product__c/fields/Environmental_information__c.field-meta.xml
<CustomField>
    <fullName>Environmental_information__c</fullName>
    <label>Environmental information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>