force-app/main/default/objects/Product__c/fields/Estimated_DR_Time__c.field-meta.xml
<CustomField>
    <fullName>Estimated_DR_Time__c</fullName>
    <label>Estimated DR Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>