force-app/main/default/objects/Product__c/fields/Export_model_name_first_7_digits__c.field-meta.xml
<CustomField>
    <fullName>Export_model_name_first_7_digits__c</fullName>
    <label>Export model name (first 7 digits)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>