force-app/main/default/objects/Product__c/fields/External_key__c.field-meta.xml
<CustomField>
    <fullName>External_key__c</fullName>
    <externalId>true</externalId>
    <label>External key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>