force-app/main/default/objects/Product__c/fields/Freezing_ability__c.field-meta.xml
<CustomField>
    <fullName>Freezing_ability__c</fullName>
    <label>Freezing ability</label>
    <length>255</length>
    <type>Text</type>
</CustomField>