force-app/main/default/objects/Product__c/fields/Freezing_Chamber_Drawer__c.field-meta.xml
<CustomField>
    <fullName>Freezing_Chamber_Drawer__c</fullName>
    <label>Freezing Chamber Drawer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>