force-app/main/default/objects/Product__c/fields/Freezing_Door_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Freezing_Door_Configuration__c</fullName>
    <label>Freezing Door Configuration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>