force-app/main/default/objects/Product__c/fields/Front_Shell_Color__c.field-meta.xml
<CustomField>
    <fullName>Front_Shell_Color__c</fullName>
    <label>Front Shell Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>