force-app/main/default/objects/Product__c/fields/Handle_Appearance__c.field-meta.xml
<CustomField>
    <fullName>Handle_Appearance__c</fullName>
    <label>Handle Appearance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>