force-app/main/default/objects/Product__c/fields/Handle_Form__c.field-meta.xml
<CustomField>
    <fullName>Handle_Form__c</fullName>
    <label>Handle Form</label>
    <length>255</length>
    <type>Text</type>
</CustomField>