force-app/main/default/objects/Product__c/fields/Handle_Type__c.field-meta.xml
<CustomField>
    <fullName>Handle_Type__c</fullName>
    <label>Handle Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Visible Pull Design</fullName>
            </value>
            <value>
                <fullName>Concealed Pull Design</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>