force-app/main/default/objects/Product__c/fields/Hardware_band_WCDMA__c.field-meta.xml
<CustomField>
    <fullName>Hardware_band_WCDMA__c</fullName>
    <label>Hardware band WCDMA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>