force-app/main/default/objects/Product__c/fields/Hardware_CPU_platform__c.field-meta.xml
<CustomField>
    <fullName>Hardware_CPU_platform__c</fullName>
    <label>Hardware CPU platform</label>
    <length>255</length>
    <type>Text</type>
</CustomField>