force-app/main/default/objects/Product__c/fields/Hardware_main_camera_pixel_in_MP__c.field-meta.xml
<CustomField>
    <fullName>Hardware_main_camera_pixel_in_MP__c</fullName>
    <label>Hardware main camera pixel (in MP)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>