force-app/main/default/objects/Product__c/fields/Hardware_memory_ROM_unit_GB__c.field-meta.xml
<CustomField>
    <fullName>Hardware_memory_ROM_unit_GB__c</fullName>
    <label>Hardware memory ROM (unit GB)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>