force-app/main/default/objects/Product__c/fields/HDR__c.field-meta.xml
<CustomField>
    <fullName>HDR__c</fullName>
    <label>HDR</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dolbly vision&amp;Atmos</fullName>
            </value>
            <value>
                <fullName>Dolbly vision</fullName>
            </value>
            <value>
                <fullName>HDR 10</fullName>
            </value>
            <value>
                <fullName>HDR 10+</fullName>
            </value>
            <value>
                <fullName>HDR HLG</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>