force-app/main/default/objects/Product__c/fields/Heating__c.field-meta.xml
<CustomField>
    <fullName>Heating__c</fullName>
    <label>Heating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>