force-app/main/default/objects/Product__c/fields/Heating_Efficiency_Unit__c.field-meta.xml
<CustomField>
    <fullName>Heating_Efficiency_Unit__c</fullName>
    <label>Heating Efficiency Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>W/W</fullName>
            </value>
            <value>
                <fullName>Btu/h/W</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>