force-app/main/default/objects/Product__c/fields/High_End_Model_Asean__c.field-meta.xml
<CustomField>
    <fullName>High_End_Model_Asean__c</fullName>
    <formula>IF(
    text(Product_Line__c) = &quot;TV&quot;,
    IF(VALUE(LEFT(Name, 2)) &gt;= 75, &quot;High-End&quot;, &quot;&quot;),
    
    IF(
        text(Product_Line__c)= &quot;Refrigerator&quot;,
        IF(OR(LEFT(Name, 2) = &quot;RS&quot;, LEFT(Name, 2) = &quot;RQ&quot;), &quot;High-End&quot;, &quot;&quot;),
        
        IF(
            text(Product_Line__c)= &quot;WM&quot;,
            IF(OR(LEFT(Name, 2) = &quot;WD&quot;, LEFT(Name, 2) = &quot;DH&quot;), &quot;High-End&quot;, &quot;&quot;),
            
            IF(
                text(Product_Line__c)= &quot;AC&quot;,
                IF(
                    OR(
                        VALUE(MID(Name, 3, 2)) &gt;= 18,
                        VALUE(MID(Name, 4, 2)) &gt;= 18
                    ),
                    &quot;High-End&quot;, &quot;&quot;
                ),
                &quot;&quot; 
            )
        )
    )
)</formula>
    <label>High-End Model(Asean)</label>
    <type>Text</type>
</CustomField>