force-app/main/default/objects/Product__c/fields/Indicator_Function__c.field-meta.xml
<CustomField>
    <fullName>Indicator_Function__c</fullName>
    <label>Indicator Function</label>
    <length>255</length>
    <type>Text</type>
</CustomField>