force-app/main/default/objects/Product__c/fields/Inner_Glass_Door__c.field-meta.xml
<CustomField>
    <fullName>Inner_Glass_Door__c</fullName>
    <label>Inner Glass Door</label>
    <length>255</length>
    <type>Text</type>
</CustomField>