force-app/main/default/objects/Product__c/fields/Intelligent_System__c.field-meta.xml
<CustomField>
    <fullName>Intelligent_System__c</fullName>
    <label>Intelligent System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Android</fullName>
            </value>
            <value>
                <fullName>Roku</fullName>
            </value>
            <value>
                <fullName>Web OS</fullName>
            </value>
            <value>
                <fullName>Tizen</fullName>
            </value>
            <value>
                <fullName>Vidaa</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>