force-app/main/default/objects/Product__c/fields/Internal_External_Condenser__c.field-meta.xml
<CustomField>
    <fullName>Internal_External_Condenser__c</fullName>
    <label>Internal External Condenser</label>
    <length>255</length>
    <type>Text</type>
</CustomField>