force-app/main/default/objects/Product__c/fields/Key_products__c.field-meta.xml
<CustomField>
    <fullName>Key_products__c</fullName>
    <defaultValue>false</defaultValue>
    <description>是否重点产品</description>
    <label>Key products</label>
    <type>Checkbox</type>
</CustomField>