force-app/main/default/objects/Product__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <label>产品等级</label>
    <length>20</length>
    <type>Text</type>
</CustomField>