force-app/main/default/objects/Product__c/fields/Light_box_light__c.field-meta.xml
<CustomField>
    <fullName>Light_box_light__c</fullName>
    <label>Light box light</label>
    <length>255</length>
    <type>Text</type>
</CustomField>