force-app/main/default/objects/Product__c/fields/Main_Function__c.field-meta.xml
<CustomField>
    <fullName>Main_Function__c</fullName>
    <label>Main Function</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>