force-app/main/default/objects/Product__c/fields/MEMC__c.field-meta.xml
<CustomField>
    <fullName>MEMC__c</fullName>
    <label>MEMC</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>