force-app/main/default/objects/Product__c/fields/Name_Description__c.field-meta.xml
<CustomField>
    <fullName>Name_Description__c</fullName>
    <description>用于阿根廷产品名称展示，name description+product model</description>
    <label>Name Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>