force-app/main/default/objects/Product__c/fields/Narrow_border__c.field-meta.xml
<CustomField>
    <fullName>Narrow_border__c</fullName>
    <label>Narrow border</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Belzel-less</fullName>
            </value>
            <value>
                <fullName>Narrow</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>