force-app/main/default/objects/Product__c/fields/ODU_Package_Size__c.field-meta.xml
<CustomField>
    <fullName>ODU_Package_Size__c</fullName>
    <label>ODU Package Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>