force-app/main/default/objects/Product__c/fields/Open_Angle__c.field-meta.xml
<CustomField>
    <fullName>Open_Angle__c</fullName>
    <label>Open Angle</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>