force-app/main/default/objects/Product__c/fields/POP_Folding_Image__c.field-meta.xml
<CustomField>
    <fullName>POP_Folding_Image__c</fullName>
    <label>POP Folding Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>