force-app/main/default/objects/Product__c/fields/Power_consumption__c.field-meta.xml
<CustomField>
    <fullName>Power_consumption__c</fullName>
    <label>Power consumption</label>
    <length>255</length>
    <type>Text</type>
</CustomField>