force-app/main/default/objects/Product__c/fields/Power_cord_requirements__c.field-meta.xml
<CustomField>
    <fullName>Power_cord_requirements__c</fullName>
    <label>Power cord requirements</label>
    <length>255</length>
    <type>Text</type>
</CustomField>