force-app/main/default/objects/Product__c/fields/Press_model__c.field-meta.xml
<CustomField>
    <fullName>Press_model__c</fullName>
    <label>Press model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>