force-app/main/default/objects/Product__c/fields/Price_1__c.field-meta.xml
<CustomField>
    <fullName>Price_1__c</fullName>
    <label>Price 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>