force-app/main/default/objects/Product__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hisense Product</fullName>
                <default>true</default>
                <label>Hisense Product</label>
            </value>
            <value>
                <fullName>Competitive Product</fullName>
            </value>
            <value>
                <fullName>Toshiba</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>