force-app/main/default/objects/Product__c/fields/Product_category_bottling_amount__c.field-meta.xml
<CustomField>
    <fullName>Product_category_bottling_amount__c</fullName>
    <label>Product category (bottling amount)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>