force-app/main/default/objects/Product__c/fields/Product_dimensions_width_depth_heig__c.field-meta.xml
<CustomField>
    <fullName>Product_dimensions_width_depth_heig__c</fullName>
    <label>Product dimensions (width × depth × heig</label>
    <length>255</length>
    <type>Text</type>
</CustomField>