force-app/main/default/objects/Product__c/fields/Product_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Product External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>