force-app/main/default/objects/Product__c/fields/Product_level_cooling_method_product__c.field-meta.xml
<CustomField>
    <fullName>Product_level_cooling_method_product__c</fullName>
    <label>Product level (cooling method) - product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>