force-app/main/default/objects/Product__c/fields/Product_level_door__c.field-meta.xml
<CustomField>
    <fullName>Product_level_door__c</fullName>
    <label>Product level (door)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>