force-app/main/default/objects/Product__c/fields/Product_level_frequency_conversion_Y_N__c.field-meta.xml
<CustomField>
    <fullName>Product_level_frequency_conversion_Y_N__c</fullName>
    <label>Product level (frequency conversion Y/N)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>