force-app/main/default/objects/Product__c/fields/Product_level_volume_segment_volume__c.field-meta.xml
<CustomField>
    <fullName>Product_level_volume_segment_volume__c</fullName>
    <label>Product level (volume segment) - volume</label>
    <length>255</length>
    <type>Text</type>
</CustomField>