force-app/main/default/objects/Product__c/fields/Product_loading__c.field-meta.xml
<CustomField>
    <fullName>Product_loading__c</fullName>
    <label>Product loading</label>
    <length>255</length>
    <type>Text</type>
</CustomField>