force-app/main/default/objects/Product__c/fields/Product_Model__c.field-meta.xml
<CustomField>
    <fullName>Product_Model__c</fullName>
    <label>Product Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sony</fullName>
            </value>
            <value>
                <fullName>Daikin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>