force-app/main/default/objects/Product__c/fields/Production_base__c.field-meta.xml
<CustomField>
    <fullName>Production_base__c</fullName>
    <label>Production base</label>
    <length>255</length>
    <type>Text</type>
</CustomField>