force-app/main/default/objects/Product__c/fields/Quantity_Calculate__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Calculate__c</fullName>
    <label>数量计算</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>