force-app/main/default/objects/Product__c/fields/Refrigerating_Capacity_Unit__c.field-meta.xml
<CustomField>
    <fullName>Refrigerating_Capacity_Unit__c</fullName>
    <label>Refrigerating Capacity Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>W</fullName>
            </value>
            <value>
                <fullName>Btu/h</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>