force-app/main/default/objects/Product__c/fields/Refrigerating_Door_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Refrigerating_Door_Configuration__c</fullName>
    <label>Refrigerating Door Configuration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>