force-app/main/default/objects/Product__c/fields/Refrigerating_Efficiency__c.field-meta.xml
<CustomField>
    <fullName>Refrigerating_Efficiency__c</fullName>
    <label>Refrigerating Efficiency</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>