force-app/main/default/objects/Product__c/fields/Refrigerating_Fruit_Box_Cover__c.field-meta.xml
<CustomField>
    <fullName>Refrigerating_Fruit_Box_Cover__c</fullName>
    <label>Refrigerating Fruit Box Cover</label>
    <length>255</length>
    <type>Text</type>
</CustomField>