force-app/main/default/objects/Product__c/fields/Refrigerating_Shelf__c.field-meta.xml
<CustomField>
    <fullName>Refrigerating_Shelf__c</fullName>
    <label>Refrigerating Shelf</label>
    <length>255</length>
    <type>Text</type>
</CustomField>