force-app/main/default/objects/Product__c/fields/Refrigerator_Type__c.field-meta.xml
<CustomField>
    <fullName>Refrigerator_Type__c</fullName>
    <label>Refrigerator Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>