force-app/main/default/objects/Product__c/fields/Retail_Price_Price__c.field-meta.xml
<CustomField>
    <fullName>Retail_Price_Price__c</fullName>
    <label>Retail Price / Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>