force-app/main/default/objects/Product__c/fields/Rotate_Speed_RPM__c.field-meta.xml
<CustomField>
    <fullName>Rotate_Speed_RPM__c</fullName>
    <label>Rotate Speed RPM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>